# subwayGUI

./: .gitignore  0_test_t10_20221118.txt  Assets.py  Config.py  DropOrSelectButton.py  DynamicAssets.py  DynamicStepUnit.py  FileSidebar.py  FileStatusButton.py  GUI.py  GUIWorkspace.py  InputStepInfoDialog.py  Main.py  NodeDynamic.py  QCDynamic.py  QCViewer.py  README.md  SchemaBuilder.py  StaticAssets.py  Subway.py  SubwayLine.py  SubwayStartPage.py  TabbedWorkspace.py  Toolbox.py  c_FileSidebar.py  c_InputStepInfoDialog.py  c_Subway_Line.py  components.json  config.py  data.py  index.html  main.py  main.spec  model.py  new_schema_20230116.json  p_SchemaBuilder.py  p_Subway_Container.py  p_Subway_StartPage.py  package-lock.json  package.json  (+12 more)
archive/: .gitignore  0_test_t10_20221118.txt  README.md  main.py  main.spec  requirements.txt  static.py  very scratch scratch  very scratchy scratch 2.py
config/: tmp_last_run.json
data/: 0_test_t10_20221118.txt  New Text Document.txt  new_schema_20221204.txt  new_schema_20221216.txt  new_schema_20221222.json  new_schema_20230115.json  new_schema_20230216.json  test_qc_20221130.txt  tmp_last_run.json
info/: aknowledgements.md  planning.md  resources.txt
program data/: new_schema_20230116.json  testfolderschema.txt
src/: App.css  App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/test_pipeline/: step0.txt  step2.csv
src-tauri/test_pipeline/all_python_scripts/: script2.py  script3.py
src-tauri/test_pipeline/py_matlab_r_scripts/: script1.py
src/pages/: Home.tsx  (+5 more)
(+53 files in other folders)
